--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
 
 #    CI/CD용 EC2 DB
     url: jdbc:mysql://ec2-mysql-db1.c6l0kqlbscuy.ap-northeast-2.rds.amazonaws.com:3306/project2
-    username:
-    password:
+    username: user1
+    password: ghdfhr1579
 
   jpa:
 #    database: mysql
